--- a/style.css
+++ b/style.css
@@ -20,10 +20,13 @@
   
   border: solid 1px black;
   border-radius: 5px;
+
+  transition: all .1s;
 }
 
 .key_active {
   background-color: beige;
+  transform: scale(.9);
 }
 
 #Backspace {
