--- a/style.css
+++ b/style.css
@@ -4,6 +4,18 @@
   box-sizing: border-box;
 }
 
+body {
+  width: 100%;
+}
+
+.input-box {
+  display: block;
+
+  margin: 0 auto;
+  width: 900px;
+  height: 240px;
+}
+
 .keyboard {
   display: flex;
   flex-wrap: wrap;
@@ -22,6 +34,7 @@
   border-radius: 5px;
 
   transition: all .1s;
+  user-select: none;
 }
 
 .key_active {
