--- a/style.css
+++ b/style.css
@@ -6,14 +6,24 @@
 
 body {
   width: 100%;
+  background-color: #39251C;
+  color: #F69B08;
 }
 
 .input-box {
   display: block;
 
   margin: 0 auto;
+  margin-top: 20px;
   width: 900px;
   height: 240px;
+
+  font-size: 20px;
+
+  background-color: #39251C;
+  border-color: #F69B08;
+  color: #F69B08;
+  outline: none;
 }
 
 .keyboard {
@@ -30,7 +40,7 @@ body {
   width: 50px;
   height: 50px;
   
-  border: solid 1px black;
+  border: solid 1px #F69B08;
   border-radius: 5px;
 
   transition: all .1s;
@@ -38,7 +48,7 @@ body {
 }
 
 .key_active {
-  background-color: beige;
+  background-color: #574132;
   transform: scale(.9);
 }
 
@@ -80,4 +90,11 @@ body {
 #ArrowRight {
   text-align: center;
   padding-top: 10px;
+}
+
+.info {
+  margin: 20px;
+
+  text-align: center;
+  letter-spacing: 1px;
 }
